--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,13 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "rxjs-compat",
+              "validator",
+              "twilio-video",
+              "chartjs",
+              "lodash"
+           ],
             "outputPath": "dist/cda-frond-end",
             "index": "src/index.html",
             "main": "src/main.ts",
