--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment-timezone": "^0.5.43",
     "multer": "^1.4.5-lts.1",
     "ngx-ui-loader": "^13.0.0",
+    "pdfjs-dist": "^4.0.189",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
